--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests (placeholder)
-      run: echo "No tests yet!"
+    - name: Run tests (unit)
+      run: npm test
 
     - name: Build Docker image
       run: |
