--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "jest"
-    
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "jest-html-reporter": "^3.10.2",
     "supertest": "^7.0.0"
   }
+  
 }
